[package]
name = "ch5_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["event"] }

[[bin]]
name = "iterative"
path = "src/iterative.rs"

[[bin]]
name = "concurrent"
path = "src/concurrent.rs"
